Criação de uma nova validação, criação de alguns outros entrypoints para categoria e pessoa, novas mensagens de excessão, criação da camada de serviço.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,6 @@
-mensagem.invalida = Par\u00E2metro inv\u00E1lido
+mensagem.invalida = Par\u00E2metro inv\u00E1lido!
+
+
+recurso.nao-encontrado=Recurso n\u00E3o encontrado
 
 categoria.nome=NOME
