Validando inconsistencias no cadastro de um lançamento.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,7 @@
 mensagem.invalida = Par\u00E2metro inv\u00E1lido!
-
-
+recurso.operacao-nao-permitida = Opera\u00E7\u00E3o n\u00E3o permitida
 recurso.nao-encontrado=Recurso n\u00E3o encontrado
 
-categoria.nome=NOME
+categoria.nome = NOME
+pessoa.nome = Nome
+pessoa.ativo = Ativo
