Validando campos no cadastro de um lançamento.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,5 +3,13 @@ recurso.operacao-nao-permitida = Opera\u00E7\u00E3o n\u00E3o permitida
 recurso.nao-encontrado=Recurso n\u00E3o encontrado
 
 categoria.nome = NOME
+
 pessoa.nome = Nome
 pessoa.ativo = Ativo
+
+lancamento.descricao = Descri\u00E7\u00E3o 
+lancamento.dataVencimento = Data Vencimento
+lancamento.valor = Valor
+lancamento.tipo = Tipo
+lancamento.categoria = C\u00F3digo Categoria
+lancamento.pessoa = C\u00F3digo Pessoa
